fixed overflow text

--- a/client/components/style.css
+++ b/client/components/style.css
@@ -502,3 +502,18 @@ left: -180%;
   margin-top: 30px;
 
 }
+
+.Singletextreview{
+  font-size: 20px !important;
+  font-style: italic;
+  color: rgb(50,50,50);
+  margin-left: 12% !important;
+  padding: 0%;
+  text-align: center;
+  color:white;
+  width: 80%;
+  height: 50%;
+  overflow: none;
+  padding-top: 5%;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
